# pride_task1

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  task.txt
alembic/: env.py
alembic/versions/: 2f18073d1311_create_users_table.py  704582914134_create_users_table.py
src/: main.py  settings.py
src/db/: base.py  session.py
src/orderservice/: main.py
src/orderservice/api/: routers.py
src/orderservice/kafka/: config.py  consumer.py  producer.py
src/orderservice/models/: order.py
src/users/: dao.py
src/users/auth/: auth.py  router.py  schemas.py
src/users/models/: user.py
