[project]
name = "orderservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Dilyaver",email = "yxs.crevier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "alembic (>=1.18.2,<2.0.0)",
    "confluent-kafka (>=2.13.0,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{include = "orderservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
