[project]
name = "orderservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Dilyaver",email = "yxs.crevier@gmail.com"}
]

requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiokafka (>=0.11.0,<0.12.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (==4.0.1)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
packages = [{include = "orderservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

